# AIDash

./: LICENSE  README.md  requirements.txt
backend/: .env  README.md  main.py  pyproject.toml  research_dashboard.db
backend/alembic/: env.py
backend/alembic/versions/: 20250519_initial_paper_table.py
backend/app/: main.py
backend/app/db/: database.py  models.py
backend/app/models/: database.py  paper.py
backend/app/routers/: papers.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: Navbar.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  Papers.tsx  Recommendations.tsx
